# claude-esp-rs

./: .gitignore  Cargo.toml  README.md
.beads/: issues.jsonl
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs  parser.rs  types.rs  watcher.rs
src/tui/: mod.rs  stream.rs  styles.rs  tree.rs
tests/: integration_test.rs
